[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masih-python"
version = "0.1.0"
description = "Modular Analysis Suite for Interactive Heterogeneity - Python/Dash Implementation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Masih Sherafatian", email = "masihshrftn@gmail.com"}
]
keywords = ["single-cell", "RNA-seq", "bioinformatics", "visualization", "dash", "scanpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: OS Independent",
]

dependencies = [
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "dash-bio>=1.0.0",
    "plotly>=5.18.0",
    "scanpy>=1.9.0",
    "anndata>=0.10.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "openpyxl>=3.1.0",
    "tables>=3.8.0",
    "h5py>=3.9.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]
trajectory = [
    "cellrank>=2.0.0",
    "scvelo>=0.3.0",
]
pathways = [
    "decoupler>=1.4.0",
]
all = [
    "masih-python[dev,trajectory,pathways]",
]

[project.urls]
Homepage = "https://github.com/msherafatian/masih-python"
Documentation = "https://github.com/msherafatian/masih-python/docs"
Repository = "https://github.com/msherafatian/masih-python"
"Bug Tracker" = "https://github.com/msherafatian/masih-python/issues"
"R Version" = "https://github.com/msherafatian/masih"

[tool.setuptools]
packages = ["masih"]

[tool.setuptools.package-data]
masih = ["config/*.json", "assets/*", "data/gene_sets/*.gmt"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | \.eggs
  | \.tox
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=masih --cov-report=html --cov-report=term-missing --verbose"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".eggs", "*.egg"]
